This file documents the revision history for the Monitoring Webinterface Thruk.


0.60    Sat May 15 15:18:13 CEST 2010
          - page delivery is delayed for a few seconds after backend restarts (services would be displayed pending otherwise)
          - added more quick commands (enable/disable notifications/active checks, sub. passive result)
          - quick commands can be disabled separately
          - moved logging configuration into separate file
          - added spread checks option when rescheduling many services/hosts
          - keep filled in start/end time when submitting commands, even after missing values verfication
          - fixed problem with display of quotes in popups when escape_html_tags disabled
          - fixed problem with display of very long performance data
          - fixed problem with start_page and absolute uris
          - fixed problem with sending command in IE
          - fixed problem with reseting pager on filter change
          - fixed problem with multiple filters and paging
          - fixed problem with paging nothing but selected all

0.58    Mon Apr 12 16:30:40 CEST 2010
          - changed to FCGI::ProcManager::MaxRequests
            as temporary workaround for memory leaking problems
          - fixed javascript issues with safari and opera
          - fixed adding persistent comments from status.cgi

0.56    Fri Apr  9 08:58:43 CEST 2010
          - fixed host acknowledgements
          - fixed problem with date filter in status.cgi
          - fixed host soft/hard state display
          - fixed problem with onmouseover for long plugin output
          - fixed problem with pnp4nagios ssi includes and prototype

0.54    Mon Apr  5 16:37:42 CEST 2010
          - added ajax search to side navigation and status page
          - made eventype for status.cgi popups configurable
          - renamed cgi_cfg option to cgi.cfg
          - fixed removing downtimes
          - fixed removing comments