@@ -32,6 +32,14 @@ sub index :Path :Args(1) :ActionClass('RenderView') {
     # status code must be != 200, otherwise compressed output will fail
     my $code = 500; # internal server error
 
+    # override some errors for admins
+    if(defined $arg1 and $arg1 == 15 and $c->check_user_roles('authorized_for_all_services')) {
+        $arg1 = 18;
+    }
+    if(defined $arg1 and $arg1 == 5  and $c->check_user_roles('authorized_for_all_hosts')) {
+        $arg1 = 17;
+    }
+
     my $errors = {
         '99'  => {
             'mess' => '',
@@ -122,6 +130,16 @@ sub index :Path :Args(1) :ActionClass('RenderView') {
             'dscr' => 'problems while loading graphics library, look at your logfile for details',
             'code' => 500, # internal server error
         },
+        '17'  => {
+            'mess' => 'This host does not exist...',
+            'dscr' => 'If you believe this is an error, check your monitoring configuration and make sure all backends are connected.',
+            'code' => 404, # not found
+        },
+        '18'  => {
+            'mess' => 'This service does not exist...',
+            'dscr' => 'If you believe this is an error, check your monitoring configuration and make sure all backends are connected.',
+            'code' => 404, # not found
+        },
     };
 
     $arg1 = 0 unless defined $errors->{$arg1}->{'mess'};
@@ -137,6 +155,7 @@ sub index :Path :Args(1) :ActionClass('RenderView') {
     unless(defined $ENV{'TEST_ERROR'}) { # supress error logging in test mode
         if($code >= 500) {
             $c->log->error($errors->{$arg1}->{'mess'});
+            $c->log->error("on page: ".$c->request->uri) if defined $c->request->uri;
         } else {
             $c->log->info($errors->{$arg1}->{'mess'});
         }
